--- a/assets/style.css
+++ b/assets/style.css
@@ -245,11 +245,10 @@ p {
 }
 
 .hovtext p {
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 22px;
+    font-weight: 200;
     margin: 0% 5% 5%;
     text-align: center;
-    letter-spacing: -.5px;
     line-height: 130%;
 }
 
