--- a/assets/showbuddy.css
+++ b/assets/showbuddy.css
@@ -157,7 +157,7 @@ ul  {
 
 .csnav ul {
     line-height: 250%;
-    font-size: 1em;
+    font-size: 18px;
 }
 
 .csnav li span, .back span {
@@ -940,7 +940,7 @@ ul  {
     
     }
     
-    .sticky li {
+    .sticky ul {
         font-size: 16px;
     }
     
@@ -1209,7 +1209,7 @@ ul  {
 @media (max-width: 375px) {
    
     .sticky ul {
-        margin-left: 75px;
+        margin-left: 77px;
     }
 }
 
