--- a/assets/style.css
+++ b/assets/style.css
@@ -241,6 +241,7 @@ p {
     line-height: 200%;
     text-align: center;
     margin-bottom: 6%;
+    letter-spacing: .4px;
     opacity: .9;
 }
 
@@ -250,6 +251,7 @@ p {
     margin: 0% 5% 5%;
     text-align: center;
     line-height: 130%;
+    letter-spacing: .4px;
 }
 
 
