--- a/assets/orion.css
+++ b/assets/orion.css
@@ -161,6 +161,7 @@ ul  {
 .csnav ul {
     line-height: 250%;
     font-size: 18px;
+    
 }
 
 .csnav li span, .back span {
@@ -307,7 +308,7 @@ ul  {
     
 }
 
-.home2 img, .ethi img, .surv img, .pers img {
+.home2 img, .ethi img, .surv img, .pers img, .coffee1 img {
     margin-top: 100px;
     width: 100%;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
@@ -504,7 +505,7 @@ ul  {
 
 .stylec {
     grid-area: stylec;
-    margin: -10px 0px 90px;
+    margin: -30px 0px 90px;
 }
 
 .wirep {
@@ -583,9 +584,15 @@ ul  {
 .abpic img {
     width: 47%;
     margin: 1%;
-         box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 
 }
+
+ .abpic img:nth-child(4) {
+        width: 80%; 
+        margin: 5% 10% 0%;
+    }
+    
 
 .mockp {
     grid-area: mockp;
@@ -731,7 +738,8 @@ ul  {
         ". chal chal chal chal . . sol sol sol sol ."
         "chalp chalp chalp chalp chalp chalp solp solp solp solp solp solp"
         ". . prot prot prot prot prot prot prot prot . ."
-        "home2 home2 home2 home2 coffee1 coffee1 coffee1 coffee1 ethi ethi ethi ethi" 
+         "home2 home2 home2 home2 home2 home2 ethi ethi ethi ethi ethi ethi" 
+        "coffee1 coffee1 coffee1 coffee1 coffee1 coffee1 coffee1 coffee1 coffee1 coffee1 coffee1 coffee1"
         ". . pro pro pro pro pro pro pro pro . ."
         ". prop prop prop prop prop prop prop prop prop prop ."
         "peets peets peets cbtl cbtl cbtl cbtl cbtl mcnt mcnt mcnt mcnt" 
@@ -749,6 +757,8 @@ ul  {
         ". . . . stylec stylec stylec stylec . . . ."
         ". . wirep wirep wirep wirep wirep wirep wirep wirep . ."
         "wires wires wires wires wires wires wires wires wires wires wires wires"
+        "wires2 wires2 wires2 wires2 wires2 wires2 wires2 wires2 wires2 wires2 wires2 wires2"
+        "wires3 wires3 wires3 wires3 wires3 wires3 wires3 wires3 wires3 wires3 wires3 wires3"  
         ". . abtest abtest abtest abtest abtest abtest abtest abtest . ."
         "abpic abpic abpic abpic abpic abpic abpic abpic abpic abpic abpic abpic"
         ". . mockp mockp mockp mockp mockp mockp mockp mockp . ."
@@ -819,6 +829,10 @@ ul  {
     .pers img, .surv img {
          margin-top: 80px;
     }
+    
+    .stylec {
+        margin-top: 10px;
+    }
        
 
      .chalp, .solp, .prop, .flowp, .comp, .wirep, 
@@ -837,7 +851,7 @@ ul  {
     }
     
      .home2 p, .coffee1 p, .ethi p, .surv p, .pers p,
-     .peets p, .cbtl p, .mcnt p, .stylec, .wires p, wires2 p {
+     .peets p, .cbtl p, .mcnt p, .stylec, .wires p, .wires2 p, .wires3 p, .abpic p {
        line-height: 150%;
        font-size: 14px;
     }
@@ -884,7 +898,8 @@ ul  {
         ". chal chal chal chal . . sol sol sol sol ."
         "chalp chalp chalp chalp chalp chalp solp solp solp solp solp solp"
         ". . prot prot prot prot prot prot prot prot . ."
-        "home2 home2 home2 home2 coffee1 coffee1 coffee1 coffee1 ethi ethi ethi ethi" 
+        "home2 home2 home2 home2 home2 home2 ethi ethi ethi ethi ethi ethi" 
+        "coffee1 coffee1 coffee1 coffee1 coffee1 coffee1 coffee1 coffee1 coffee1 coffee1 coffee1 coffee1"      
         ". . pro pro pro pro pro pro pro pro . ."
         ". prop prop prop prop prop prop prop prop prop prop ."
         "peets peets peets cbtl cbtl cbtl cbtl cbtl mcnt mcnt mcnt mcnt" 
@@ -902,6 +917,8 @@ ul  {
         ". . . . stylec stylec stylec stylec . . . ."
         ". . wirep wirep wirep wirep wirep wirep wirep wirep . ."
         "wires wires wires wires wires wires wires wires wires wires wires wires"
+        "wires2 wires2 wires2 wires2 wires2 wires2 wires2 wires2 wires2 wires2 wires2 wires2"
+        "wires3 wires3 wires3 wires3 wires3 wires3 wires3 wires3 wires3 wires3 wires3 wires3"    
         ". . abtest abtest abtest abtest abtest abtest abtest abtest . ."
         "abpic abpic abpic abpic abpic abpic abpic abpic abpic abpic abpic abpic"
         ". . mockp mockp mockp mockp mockp mockp mockp mockp . ."
@@ -960,7 +977,7 @@ ul  {
         "flow3 flow3 flow3 flow3 flow3 flow3"
         "bran bran bran bran bran bran"
         "branp branp branp branp branp branp"
-        "tsk1 tsk1 tsk1 tsk2 tsk2 tsk2"
+        "tsk1 tsk1 tsk1 tsk1 tsk1 tsk1"
         "branp2 branp2 branp2 branp2 branp2 branp2"
         "colors colors colors colors colors colors" 
         "clogos clogos clogos clogos clogos clogos"
@@ -968,6 +985,8 @@ ul  {
         "stylec stylec stylec stylec stylec stylec"
         "wirep wirep wirep wirep wirep wirep"
         "wires wires wires wires wires wires"
+        "wires2 wires2 wires2 wires2 wires2 wires2"
+        "wires3 wires3 wires3 wires3 wires3 wires3"    
         "abtest abtest abtest abtest abtest abtest"
         "abpic abpic abpic abpic abpic abpic"
         "mockp mockp mockp mockp mockp mockp"
@@ -998,6 +1017,10 @@ ul  {
     
     .csnav {
         margin: 40px 0px 20px;
+    }
+    
+    .csnav ul {
+        margin-left: 30px;
     }
     
     .csnav li {
@@ -1041,6 +1064,11 @@ ul  {
        font-size: 14px;
     }
     
+    .coffee1 img {
+    margin: 0;
+    width: 100%;
+}
+    
     .home2 img, .coffee1 img, .ethi img, .surv img, .pers img {
        margin-top: 50px;
         
@@ -1051,7 +1079,7 @@ ul  {
     }
     
     .abpic {
-        margin: 30px 0px 25px
+        margin: 50px 0px;
     }
     
     .peets {
@@ -1077,19 +1105,66 @@ ul  {
     
     .tsk1 img {
         width: 100%;
+        margin: 0;
     }
     
-    .clogo {
-        margin-right: 15px;
-        margin-top: 10px;
-    }
     
     .clogos, .colors {
-        margin-top: 20px;
+        margin: 20px 0% 10px
     }
     
     .stylec {
         margin-bottom: 40px;
+    }
+    
+    .wires {
+        margin-top: 40px;
+    }
+    
+    .wires2, .wires3 {
+        margin-bottom: 50px;
+    }
+    
+    .wires img, .wires2 img, .wires3 img {
+        margin: 5% 0;
+        width: 100%;
+        
+    }
+    
+    .wires img:nth-child(1) {
+    width: 100%;
+} 
+.wires img:nth-child(2) {
+    width: 100%;
+}
+.wires img:nth-child(3) {
+    width: 100%;
+}
+    
+    .wires2 img:nth-child(1) {
+    width: 100%;
+} 
+.wires2 img:nth-child(2) {
+    width: 100%;
+}
+.wires2 img:nth-child(3) {
+    width: 100%;
+}
+    
+    
+    .wires p, .wires2 p, .wires3 p, .abpic p {
+        padding: 0;
+        margin-top: 0;
+    }
+    
+    .abpic img {
+    width: 100%; 
+    margin: 5% 0
+    }
+    
+    .abpic img:nth-child(4) {
+        width: 100%;
+        margin: 10% 0% 5%;
     }
     
     .utest {
@@ -1106,6 +1181,8 @@ ul  {
     
     }
     
+
+    
     .footnav {
         display: none;
     }
@@ -1121,9 +1198,11 @@ ul  {
 
 /* ------------------ Galaxy S5 & iPhone 6, etc ------------------------*/
 
-
-
-
+@media (max-width: 375px) {
+.csnav ul {
+        margin-left: 10px;
+    }
+}
 
 /* ------------------ iPhone 5 / SE ------------------------*/
 
@@ -1137,6 +1216,10 @@ ul  {
     .csnav li {
     margin: 30px 25px;
      }
+    
+    .csnav ul {
+    margin-left: 5px;
+    }
  
     
     .contact li {
