--- a/assets/orion.css
+++ b/assets/orion.css
@@ -185,6 +185,19 @@ ul  {
 }
 
 
+.sticky {
+    position: fixed;
+    top: -60px;
+    left: 0px;
+    width: 100vw;
+    text-align: center;
+    background: white;
+    padding: 17px 0px 20px;
+    opacity: .95;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
+
+
 .position {  
     font-size: 24px;
     font-weight: 200;
@@ -790,6 +803,10 @@ ul  {
         margin: 40px 30px;
     }
 
+    .sticky {
+        padding: 10px 0px 12px;
+    }
+    
     .position {
          margin: 10px 0px 10px;
          font-size: 20px;
@@ -852,7 +869,7 @@ ul  {
     
      .home2 p, .coffee1 p, .ethi p, .surv p, .pers p,
      .peets p, .cbtl p, .mcnt p, .stylec, .wires p, .wires2 p, .wires3 p, .abpic p {
-       line-height: 150%;
+       line-height: 130%;
        font-size: 14px;
     }
     
@@ -931,6 +948,14 @@ ul  {
     
      }
     
+    .sticky {
+        padding: 3px 0px 6px;
+    
+    }
+    
+    .sticky ul {
+        font-size: 16px;
+    }
     
 }
 
@@ -1027,6 +1052,28 @@ ul  {
         margin: 40px 30px;
     }
     
+    .sticky {
+        text-align: left;
+        top: -40px;
+        
+    }  
+    
+   
+    
+    .sticky li {
+        margin-left: 0px;
+        margin-right: 70px;
+        margin-bottom: 0px;
+        margin-top: 0px;
+        font-size: 16px;
+        
+    }
+    
+    .sticky ul {
+        line-height: 200%;
+        margin-left: 95px;
+    }
+    
    .home img {
    
         margin: -10px 0px 0px;
@@ -1110,7 +1157,7 @@ ul  {
     
     
     .clogos, .colors {
-        margin: 20px 0% 10px
+        margin: 15% 0;   
     }
     
     .stylec {
@@ -1202,6 +1249,12 @@ ul  {
 .csnav ul {
         margin-left: 10px;
     }
+   
+    .sticky ul {
+        margin-left: 77px;
+    }
+
+
 }
 
 /* ------------------ iPhone 5 / SE ------------------------*/
@@ -1213,17 +1266,23 @@ ul  {
         margin: 25px 25px 75px;
      }  
     
+      .csnav ul {
+        margin-left: 0px;
+    }
+    
     .csnav li {
-    margin: 30px 25px;
+       margin: 30px 25px;
      }
     
-    .csnav ul {
-    margin-left: 5px;
-    }
- 
     
+
     .contact li {
        margin: 0px 8px;
    }
+    
+    .sticky ul {
+        margin-left: 35px;
+       
+    }
     
 }
